Creando el Blog

--- a/index.html
+++ b/index.html
@@ -34,5 +34,63 @@
             </p>
         </div>
     </header>
+
+    <div class="contenedor contenido-principal">
+        <main class="blog">
+            <h3>Nuestro Blog</h3>
+
+            <article class="entrada">
+                <div class="entrada__img">
+                    <img src="img/blog1.jpg" alt="imagen blog">
+                </div>
+
+                <div class="entrada__contenido">
+                    <h4 class="no-margin">
+                        Tipos de Grano de Café
+                    </h4>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste, nisi molestiae, vitae, eos tempore ratione impedit blanditiis ad ab id omnis unde minima et earum rerum quis provident enim ipsa.
+                    </p>
+                    <a class="boton boton--primario" href="entrada.html">Leer Entrada</a>
+                </div>
+            </article>
+
+            <article class="entrada">
+                <div class="entrada__img">
+                    <img src="img/blog2.jpg" alt="imagen blog">
+                </div>
+
+                <div class="entrada__contenido">
+                    <h4 class="no-margin">
+                        3 Deliciosas Recetas de Café
+                    </h4>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste, nisi molestiae, vitae, eos tempore ratione impedit blanditiis ad ab id omnis unde minima et earum rerum quis provident enim ipsa.
+                    </p>
+                    <a class="boton boton--primario" href="entrada.html">Leer Entrada</a>
+                </div>
+            </article>
+
+            <article class="entrada">
+                <div class="entrada__img">
+                    <img src="img/blog3.jpg" alt="imagen blog">
+                </div>
+
+                <div class="entrada__contenido">
+                    <h4 class="no-margin">
+                        Beneficios del Café
+                    </h4>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste, nisi molestiae, vitae, eos tempore ratione impedit blanditiis ad ab id omnis unde minima et earum rerum quis provident enim ipsa.
+                    </p>
+                    <a class="boton boton--primario" href="entrada.html">Leer Entrada</a>
+                </div>
+            </article>
+    
+        </main>
+        <aside class="sidebar">
+            <h3>Nuestros Cursos y Talleres</h3>
+        </aside>
+    </div>
 </body>
 </html>
