--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
             <article class="entrada">
                 <div class="entrada__img">
-                    <img src="img/blog1.jpg" alt="imagen blog">
+                    <img loading="lazy" src="img/blog1.jpg" alt="imagen blog">
                 </div>
 
                 <div class="entrada__contenido">
@@ -57,7 +57,7 @@
 
             <article class="entrada">
                 <div class="entrada__img">
-                    <img src="img/blog2.jpg" alt="imagen blog">
+                    <img loading="lazy" src="img/blog2.jpg" alt="imagen blog">
                 </div>
 
                 <div class="entrada__contenido">
@@ -73,7 +73,7 @@
 
             <article class="entrada">
                 <div class="entrada__img">
-                    <img src="img/blog3.jpg" alt="imagen blog">
+                    <img loading="lazy" src="img/blog3.jpg" alt="imagen blog">
                 </div>
 
                 <div class="entrada__contenido">
