--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BlogDeCafé</title>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    
+
+
+    <!-- Preload -->
+     <link rel="Preload" href="css/normalize.css" as="style">
+     <link rel="stylesheet" href="css/normalize.css">
+
+     <link rel="Preload" href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&display=swap" crossorigin="crossorigin" as="font">
+     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
+
+     <link rel="Preload" href="css/style.css" as="style">
+     <link rel="stylesheet" href="css/style.css">
+
+     <link rel="Preload" href="img/blog1.jpg" as="image">
 </head>
 <body>
     <header class="header">
