Mejorando el performance con prefetch

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BlogDeCafé</title>
-    
-
+    <!-- Prefetch -->
+    <link rel="Prefetch" href="nosotros.html" as="document">
 
     <!-- Preload -->
      <link rel="Preload" href="css/normalize.css" as="style">
