--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
 
      <link rel="Preload" href="css/style.css" as="style">
      <link rel="stylesheet" href="css/style.css">
-
-     <link rel="Preload" href="img/blog1.jpg" as="image">
 </head>
 <body>
     <header class="header">
@@ -52,7 +50,10 @@
 
             <article class="entrada">
                 <div class="entrada__img">
-                    <img loading="lazy" src="img/blog1.jpg" alt="imagen blog">
+                    <picture>
+                        <source loading="lazy" srcset="img/blog1.webp" type="image/webp">
+                        <img loading="lazy" src="img/blog1.jpg" alt="imagen blog">
+                    </picture>
                 </div>
 
                 <div class="entrada__contenido">
@@ -68,7 +69,10 @@
 
             <article class="entrada">
                 <div class="entrada__img">
-                    <img loading="lazy" src="img/blog2.jpg" alt="imagen blog">
+                    <picture>
+                        <source loading="lazy" srcset="img/blog2.webp" type="image/webp">
+                        <img loading="lazy" src="img/blog2.jpg" alt="imagen blog">
+                    </picture>
                 </div>
 
                 <div class="entrada__contenido">
@@ -84,7 +88,10 @@
 
             <article class="entrada">
                 <div class="entrada__img">
-                    <img loading="lazy" src="img/blog3.jpg" alt="imagen blog">
+                    <picture>
+                        <source loading="lazy" srcset="img/blog3.webp" type="image/webp">
+                        <img loading="lazy" src="img/blog3.jpg" alt="imagen blog">
+                    </picture>
                 </div>
 
                 <div class="entrada__contenido">
