--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BlogDeCafé</title>
+    <meta name="description" content="Página web de blog de café">
+
     <!-- Prefetch -->
     <link rel="Prefetch" href="nosotros.html" as="document">
 
@@ -119,7 +121,7 @@
                     <p class="widget-curso__label">Cupo
                         <span class="widget-curso__info">20</span>
                     </p>
-                    <a class="boton boton--secundario" href="entrada.html">Más Información
+                    <a class="boton boton--secundario" href="entrada.html">Más Información sobre nuestros cursos
                     </a>
                 </li>
 
